# karakup

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: constants.rs  main.rs  shared.rs
src/installer/: mod.rs
src/installer/processor/: install.rs  mod.rs
src/root/: mod.rs  processor.rs
src/uninstaller/processor/: mod.rs  uninstall.rs
src/updater/: mod.rs
src/updater/processor/: mod.rs  update.rs
