[package]
name = "karakup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.36"
color-eyre = "0.6.3"
dialoguer = "0.11.0"
octocrab = "0.41.2"
reqwest = "0.12.9"
tempfile = "3.13.0"
tokio = { version = "1.41.0", features = ["full"] }
