[package]
name = "karakup"
version = "0.1.0"
license = "BUSL-1.1"
authors = ["Andalusia Labs"]
edition = "2021"
repository = "https://github.com/karak-network/karakup"
description = "Karak CLI installation manager"
rust-version = "1.79.0"
readme = "README.md"
exclude = [".github/**", "dist-workspace.toml"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.36"
color-eyre = "0.6.3"
dialoguer = "0.11.0"
indicatif = "0.17.8"
lazy_static = "1.5.0"
octocrab = "0.41.2"
reqwest = "0.12.9"
tempfile = "3.13.0"
tokio = { version = "1.41.0", features = ["full"] }

[[bin]]
name = "karakup"
path = "src/main.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
